[gd_scene load_steps=29 format=2]

[ext_resource path="res://resources/font/OpenSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://online_mode/createQuiz_student/question_container.tscn" type="PackedScene" id=3]
[ext_resource path="res://inventory_system/data/resources/settings_data.tres" type="Resource" id=4]
[ext_resource path="res://resources/font/button.tres" type="DynamicFont" id=5]
[ext_resource path="res://online_mode/createQuiz_student/manager.gd" type="Script" id=6]
[ext_resource path="res://online_mode/createQuiz_student/lesson_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://online_mode/createQuiz_student/confirm.gd" type="Script" id=8]
[ext_resource path="res://online_mode/createQuiz_student/second_script.gd" type="Script" id=9]
[ext_resource path="res://online_mode/quiz_scene_template/quiz_scene_template.tscn" type="PackedScene" id=10]
[ext_resource path="res://inventory_system/resources/sprites/main panel.png" type="Texture" id=11]
[ext_resource path="res://resources/font/BD_Cartoon_Shout.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://resources/Themes/user_profile_line_edit.tres" type="Theme" id=13]
[ext_resource path="res://resources/Themes/file_dialog.tres" type="Theme" id=14]
[ext_resource path="res://resources/Themes/ui_theme1.tres" type="Theme" id=15]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=26]
size = 34
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 11 )
region_rect = Rect2( -2.39874, 2.34326, 215.554, 209.491 )
margin_left = 17.5262
margin_right = 16.7144
margin_top = 18.2589
margin_bottom = 35.1363

[sub_resource type="Theme" id=6]
TabContainer/fonts/font = SubResource( 26 )
TabContainer/styles/panel = SubResource( 14 )

[sub_resource type="DynamicFont" id=15]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=20]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=21]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=22]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="DynamicFont" id=24]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=25]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 2 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
quiz_template = ExtResource( 10 )
question_container = ExtResource( 3 )
lesson_instance = ExtResource( 7 )
level_name = NodePath("TabContainer/Level Settings/VBoxContainer/level_name/level_name")
question_vbox = NodePath("TabContainer/Question List/ScrollContainer/VBoxContainer")
selected_vbox = NodePath("TabContainer/View Selected Questions/ScrollContainer/VBoxContainer")
lesson_button = NodePath("TabContainer/Question List/lesson_name")
lessons_container = NodePath("popup/level_selection/ColorRect/ScrollContainer/lessons_container")
level_selection = NodePath("popup/level_selection")
delete_confirmation = NodePath("popup/delete_confirmation")
confirmation_yes_button = NodePath("popup/delete_confirmation/ColorRect/HBoxContainer/yes")
create_confirmation = NodePath("popup/create_confirmation")
dialog_box = NodePath("popup/dialog_box")
minute = NodePath("TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer/VBoxContainer/minute")
second = NodePath("TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer/VBoxContainer2/second")
successful_popup = NodePath("popup/successful_popup")
qr_textureRect = NodePath("popup/successful_popup/ColorRect/VBoxContainer/qr_code")
settings_data = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "CREATE QUIZ"
align = 1
valign = 1
autowrap = true

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -750.0
margin_top = -350.0
margin_right = 750.0
margin_bottom = 350.0
rect_min_size = Vector2( 1500, 700 )
theme = SubResource( 6 )
tab_align = 0

[node name="Level Settings" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.5262
margin_top = 67.2589
margin_right = -16.7144
margin_bottom = -35.1363

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Level Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -211.0
margin_right = 350.0
margin_bottom = 211.0
custom_constants/separation = 50
alignment = 1

[node name="level_name" type="VBoxContainer" parent="TabContainer/Level Settings/VBoxContainer"]
margin_right = 700.0
margin_bottom = 167.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="TabContainer/Level Settings/VBoxContainer/level_name"]
margin_right = 700.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "Level Name"
align = 1
valign = 1
autowrap = true

[node name="level_name" type="LineEdit" parent="TabContainer/Level Settings/VBoxContainer/level_name"]
margin_top = 67.0
margin_right = 700.0
margin_bottom = 167.0
rect_min_size = Vector2( 700, 100 )
theme = ExtResource( 13 )
align = 1
placeholder_text = "Enter level name"

[node name="timer" type="VBoxContainer" parent="TabContainer/Level Settings/VBoxContainer"]
margin_top = 217.0
margin_right = 700.0
margin_bottom = 422.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="TabContainer/Level Settings/VBoxContainer/timer"]
margin_right = 700.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Timer"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Level Settings/VBoxContainer/timer"]
margin_top = 50.0
margin_right = 700.0
margin_bottom = 205.0
custom_constants/separation = 10
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer"]
margin_left = 88.0
margin_right = 335.0
margin_bottom = 155.0

[node name="minute" type="LineEdit" parent="TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer/VBoxContainer"]
margin_right = 247.0
margin_bottom = 123.0
rect_min_size = Vector2( 20, 50 )
theme = ExtResource( 14 )
align = 1
max_length = 2
placeholder_text = "1"

[node name="Label" type="Label" parent="TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 247.0
margin_bottom = 155.0
rect_min_size = Vector2( 10, 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "minute"
align = 1
valign = 1
autowrap = true

[node name="Label" type="Label" parent="TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer"]
margin_left = 345.0
margin_top = 55.0
margin_right = 355.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 10 )
custom_fonts/font = SubResource( 21 )
text = ":"
align = 1
valign = 1
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer"]
margin_left = 365.0
margin_right = 612.0
margin_bottom = 155.0

[node name="second" type="LineEdit" parent="TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer/VBoxContainer2"]
margin_right = 247.0
margin_bottom = 123.0
rect_min_size = Vector2( 20, 50 )
theme = ExtResource( 14 )
align = 1
max_length = 2
placeholder_text = "00"
script = ExtResource( 9 )

[node name="Label" type="Label" parent="TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer/VBoxContainer2"]
margin_top = 127.0
margin_right = 247.0
margin_bottom = 155.0
rect_min_size = Vector2( 10, 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "second"
align = 1
valign = 1
autowrap = true

[node name="Question List" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 53.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 7 )

[node name="lesson_name" type="Button" parent="TabContainer/Question List"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_right = 250.0
margin_bottom = 75.0
rect_min_size = Vector2( 500, 75 )
custom_fonts/font = SubResource( 22 )
text = "Introduction to Networking"

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Question List"]
anchor_left = 0.5
anchor_top = 0.588
anchor_right = 0.5
anchor_bottom = 0.653
margin_left = -700.0
margin_top = -275.084
margin_right = 700.0
margin_bottom = 233.121
rect_min_size = Vector2( 1400, 540 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Question List/ScrollContainer"]
custom_constants/separation = 20

[node name="View Selected Questions" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 53.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 7 )

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/View Selected Questions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -725.0
margin_top = -300.0
margin_right = 725.0
margin_bottom = 300.0
rect_min_size = Vector2( 1450, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/View Selected Questions/ScrollContainer"]
custom_constants/separation = 20
alignment = 1

[node name="create_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -114.0
margin_top = -130.0
margin_right = 114.0
margin_bottom = -67.0
theme = ExtResource( 15 )
custom_fonts/font = ExtResource( 5 )
text = "Create"

[node name="popup" type="CanvasLayer" parent="."]

[node name="level_selection" type="Control" parent="popup"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="popup/level_selection"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 23 )

[node name="ColorRect" type="ColorRect" parent="popup/level_selection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -250.0
margin_right = 350.0
margin_bottom = 250.0
rect_min_size = Vector2( 700, 500 )
color = Color( 0.984314, 0.780392, 0.235294, 1 )

[node name="Label" type="Label" parent="popup/level_selection/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 24 )
text = "Select Lesson"
align = 1
valign = 1
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="popup/level_selection/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -325.0
margin_top = -415.0
margin_right = 325.0
margin_bottom = -15.0

[node name="lessons_container" type="VBoxContainer" parent="popup/level_selection/ColorRect/ScrollContainer"]
margin_right = 650.0
rect_min_size = Vector2( 650, 0 )
alignment = 1

[node name="delete_confirmation" type="Control" parent="popup"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="popup/delete_confirmation"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 23 )

[node name="ColorRect" type="ColorRect" parent="popup/delete_confirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -125.0
margin_right = 500.0
margin_bottom = 125.0
rect_min_size = Vector2( 1000, 250 )
color = Color( 0.984314, 0.780392, 0.235294, 1 )

[node name="info" type="Label" parent="popup/delete_confirmation/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -450.0
margin_top = 25.0
margin_right = 450.0
margin_bottom = 125.0
rect_min_size = Vector2( 900, 100 )
custom_fonts/font = SubResource( 24 )
text = "Are you sure you want to remove this question?"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="popup/delete_confirmation/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -100.0
margin_right = 250.0
margin_bottom = -25.0
custom_constants/separation = 100

[node name="yes" type="Button" parent="popup/delete_confirmation/ColorRect/HBoxContainer"]
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 25 )
text = "YES"
script = ExtResource( 8 )

[node name="no" type="Button" parent="popup/delete_confirmation/ColorRect/HBoxContainer"]
margin_left = 300.0
margin_right = 500.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 25 )
text = "NO"

[node name="create_confirmation" type="Control" parent="popup"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="popup/create_confirmation"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 23 )

[node name="ColorRect" type="ColorRect" parent="popup/create_confirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -125.0
margin_right = 400.0
margin_bottom = 125.0
rect_min_size = Vector2( 800, 250 )
color = Color( 0.984314, 0.780392, 0.235294, 1 )

[node name="info" type="Label" parent="popup/create_confirmation/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -450.0
margin_top = 25.0
margin_right = 450.0
margin_bottom = 125.0
rect_min_size = Vector2( 900, 100 )
custom_fonts/font = SubResource( 24 )
text = "Confirm Level Creation?"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="popup/create_confirmation/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -100.0
margin_right = 250.0
margin_bottom = -25.0
custom_constants/separation = 100

[node name="create" type="Button" parent="popup/create_confirmation/ColorRect/HBoxContainer"]
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 25 )
text = "YES"

[node name="no" type="Button" parent="popup/create_confirmation/ColorRect/HBoxContainer"]
margin_left = 300.0
margin_right = 500.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 25 )
text = "NO"

[node name="dialog_box" type="Control" parent="popup"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="popup/dialog_box"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 23 )

[node name="ColorRect" type="ColorRect" parent="popup/dialog_box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -125.0
margin_right = 400.0
margin_bottom = 125.0
rect_min_size = Vector2( 800, 350 )
color = Color( 0.984314, 0.780392, 0.235294, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="popup/dialog_box/ColorRect"]
anchor_right = 1.0
margin_bottom = 204.0
rect_min_size = Vector2( 800, 0 )

[node name="info" type="Label" parent="popup/dialog_box/ColorRect/VBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 12 )
text = "Error"
align = 1
valign = 1
autowrap = true

[node name="message" type="Label" parent="popup/dialog_box/ColorRect/VBoxContainer"]
margin_top = 104.0
margin_right = 800.0
margin_bottom = 204.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 24 )
text = "Make sure to fill-up all text fields."
align = 1
valign = 1
autowrap = true

[node name="continue" type="Button" parent="popup/dialog_box/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = -25.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 25 )
text = "Continue"

[node name="successful_popup" type="Control" parent="popup"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="popup/successful_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 23 )

[node name="ColorRect" type="ColorRect" parent="popup/successful_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -468.0
margin_top = -364.5
margin_right = 468.0
margin_bottom = 364.5
rect_min_size = Vector2( 100, 750 )
color = Color( 0.984314, 0.780392, 0.235294, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="popup/successful_popup/ColorRect"]
anchor_right = 1.0
margin_bottom = 204.0
rect_min_size = Vector2( 800, 0 )

[node name="info" type="Label" parent="popup/successful_popup/ColorRect/VBoxContainer"]
margin_right = 936.0
margin_bottom = 100.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 12 )
text = "Level Created Successfully"
align = 1
valign = 1
autowrap = true

[node name="message" type="Label" parent="popup/successful_popup/ColorRect/VBoxContainer"]
margin_top = 104.0
margin_right = 936.0
margin_bottom = 204.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 24 )
text = "game_code"
align = 1
valign = 1
autowrap = true

[node name="qr_code" type="TextureRect" parent="popup/successful_popup/ColorRect/VBoxContainer"]
margin_top = 208.0
margin_right = 936.0
margin_bottom = 558.0
rect_min_size = Vector2( 350, 350 )
stretch_mode = 6

[node name="home" type="Button" parent="popup/successful_popup/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = -25.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 25 )
text = "HOME"

[connection signal="focus_entered" from="TabContainer/Level Settings/VBoxContainer/level_name/level_name" to="TabContainer/Level Settings/VBoxContainer/level_name/level_name" method="_on_level_name_focus_entered"]
[connection signal="focus_exited" from="TabContainer/Level Settings/VBoxContainer/level_name/level_name" to="TabContainer/Level Settings/VBoxContainer/level_name/level_name" method="_on_level_name_focus_exited"]
[connection signal="gui_input" from="TabContainer/Level Settings/VBoxContainer/level_name/level_name" to="TabContainer/Level Settings/VBoxContainer/level_name/level_name" method="_on_level_name_gui_input"]
[connection signal="focus_exited" from="TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer/VBoxContainer2/second" to="TabContainer/Level Settings/VBoxContainer/timer/HBoxContainer/VBoxContainer2/second" method="_on_second_focus_exited"]
[connection signal="pressed" from="TabContainer/Question List/lesson_name" to="." method="_on_lesson_number_pressed"]
[connection signal="pressed" from="create_button" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="popup/delete_confirmation/ColorRect/HBoxContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="popup/delete_confirmation/ColorRect/HBoxContainer/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="popup/create_confirmation/ColorRect/HBoxContainer/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="popup/create_confirmation/ColorRect/HBoxContainer/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="popup/dialog_box/ColorRect/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="popup/successful_popup/ColorRect/home" to="." method="_on_home_pressed"]
